--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     font-family: Arial, sans-serif;
-    background-color: #f0f4f8;
+    background: url("./weatherhero.jpg") fixed center no-repeat;
     color: #333;
     display: flex;
     justify-content: center;
